--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -177,6 +177,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\Research_Input_RootScene.cpp" />
     <ClCompile Include="..\Classes\Research_Setting.cpp" />
     <ClCompile Include="..\Classes\PlayGroundScene.cpp" />
+    <ClCompile Include="..\Classes\Step01_RootScene.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -207,6 +208,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\Research_Input_RootScene.h" />
     <ClInclude Include="..\Classes\Research_Setting.h" />
     <ClInclude Include="..\Classes\PlayGroundScene.h" />
+    <ClInclude Include="..\Classes\Step01_RootScene.h" />
     <ClInclude Include="main.h" />
   </ItemGroup>
   <ItemGroup>
