--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -25,6 +25,9 @@
     <Filter Include="src\scene\step01\input">
       <UniqueIdentifier>{3d342e76-ee38-4112-8c52-ccf6a4052275}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\scene\step02">
+      <UniqueIdentifier>{6aade675-064c-4874-9f6b-dc07f058b9d4}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -75,18 +78,6 @@
     <ClCompile Include="..\Classes\PlayGroundScene.cpp">
       <Filter>src\scene</Filter>
     </ClCompile>
-    <ClCompile Include="..\Classes\Research_Input_AllowedKeysTestScene.cpp">
-      <Filter>src\scene\step01\input</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Classes\Research_Input_ConfigedKeysTestScene.cpp">
-      <Filter>src\scene\step01\input</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Classes\Research_Input_KeyAllowScene.cpp">
-      <Filter>src\scene\step01\input</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Classes\Research_Input_KeyConfigScene.cpp">
-      <Filter>src\scene\step01\input</Filter>
-    </ClCompile>
     <ClCompile Include="..\Classes\Research_Input_RootScene.cpp">
       <Filter>src\scene\step01\input</Filter>
     </ClCompile>
@@ -113,6 +104,21 @@
     </ClCompile>
     <ClCompile Include="..\Classes\Step01_RootScene.cpp">
       <Filter>src\scene\step01</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\Step02_RootScene.cpp">
+      <Filter>src\scene\step02</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\Research_Input_KeyAllowScene.cpp">
+      <Filter>src\scene\step02</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\Research_Input_ConfigedKeysTestScene.cpp">
+      <Filter>src\scene\step02</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\Research_Input_AllowedKeysTestScene.cpp">
+      <Filter>src\scene\step02</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\Research_Input_KeyConfigScene.cpp">
+      <Filter>src\scene\step02</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -164,18 +170,6 @@
     <ClInclude Include="..\Classes\PlayGroundScene.h">
       <Filter>src\scene</Filter>
     </ClInclude>
-    <ClInclude Include="..\Classes\Research_Input_AllowedKeysTestScene.h">
-      <Filter>src\scene\step01\input</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Classes\Research_Input_ConfigedKeysTestScene.h">
-      <Filter>src\scene\step01\input</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Classes\Research_Input_KeyAllowScene.h">
-      <Filter>src\scene\step01\input</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Classes\Research_Input_KeyConfigScene.h">
-      <Filter>src\scene\step01\input</Filter>
-    </ClInclude>
     <ClInclude Include="..\Classes\Research_Input_RootScene.h">
       <Filter>src\scene\step01\input</Filter>
     </ClInclude>
@@ -202,6 +196,21 @@
     </ClInclude>
     <ClInclude Include="..\Classes\Step01_RootScene.h">
       <Filter>src\scene\step01</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Step02_RootScene.h">
+      <Filter>src\scene\step02</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Research_Input_KeyAllowScene.h">
+      <Filter>src\scene\step02</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Research_Input_ConfigedKeysTestScene.h">
+      <Filter>src\scene\step02</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Research_Input_AllowedKeysTestScene.h">
+      <Filter>src\scene\step02</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Research_Input_KeyConfigScene.h">
+      <Filter>src\scene\step02</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
