--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -169,12 +169,12 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\Step01_Animation_PlayNStopScene.cpp" />
     <ClCompile Include="..\Classes\Step01_Animation_RootScene.cpp" />
     <ClCompile Include="..\Classes\Research_Input_AllowedKeysTestScene.cpp" />
-    <ClCompile Include="..\Classes\Research_Input_BasicScene.cpp" />
+    <ClCompile Include="..\Classes\Step01_Input_BasicScene.cpp" />
     <ClCompile Include="..\Classes\Research_Input_KeyAllowScene.cpp" />
-    <ClCompile Include="..\Classes\Research_Input_KeyCodeViewScene.cpp" />
+    <ClCompile Include="..\Classes\Step01_Input_KeyCodeViewScene.cpp" />
     <ClCompile Include="..\Classes\Research_Input_KeyConfigScene.cpp" />
     <ClCompile Include="..\Classes\Research_Input_ConfigedKeysTestScene.cpp" />
-    <ClCompile Include="..\Classes\Research_Input_RootScene.cpp" />
+    <ClCompile Include="..\Classes\Step01_Input_RootScene.cpp" />
     <ClCompile Include="..\Classes\Research_Setting.cpp" />
     <ClCompile Include="..\Classes\PlayGroundScene.cpp" />
     <ClCompile Include="..\Classes\Step01_RootScene.cpp" />
@@ -201,12 +201,12 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\Step01_Animation_PlayNStopScene.h" />
     <ClInclude Include="..\Classes\Step01_Animation_RootScene.h" />
     <ClInclude Include="..\Classes\Research_Input_AllowedKeysTestScene.h" />
-    <ClInclude Include="..\Classes\Research_Input_BasicScene.h" />
+    <ClInclude Include="..\Classes\Step01_Input_BasicScene.h" />
     <ClInclude Include="..\Classes\Research_Input_KeyAllowScene.h" />
-    <ClInclude Include="..\Classes\Research_Input_KeyCodeViewScene.h" />
+    <ClInclude Include="..\Classes\Step01_Input_KeyCodeViewScene.h" />
     <ClInclude Include="..\Classes\Research_Input_KeyConfigScene.h" />
     <ClInclude Include="..\Classes\Research_Input_ConfigedKeysTestScene.h" />
-    <ClInclude Include="..\Classes\Research_Input_RootScene.h" />
+    <ClInclude Include="..\Classes\Step01_Input_RootScene.h" />
     <ClInclude Include="..\Classes\Research_Setting.h" />
     <ClInclude Include="..\Classes\PlayGroundScene.h" />
     <ClInclude Include="..\Classes\Step01_RootScene.h" />
