--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -78,15 +78,6 @@
     <ClCompile Include="..\Classes\PlayGroundScene.cpp">
       <Filter>src\scene</Filter>
     </ClCompile>
-    <ClCompile Include="..\Classes\Research_Input_RootScene.cpp">
-      <Filter>src\scene\step01\input</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Classes\Research_Input_BasicScene.cpp">
-      <Filter>src\scene\step01\input</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Classes\Research_Input_KeyCodeViewScene.cpp">
-      <Filter>src\scene\step01\input</Filter>
-    </ClCompile>
     <ClCompile Include="..\Classes\Step01_RootScene.cpp">
       <Filter>src\scene\step01</Filter>
     </ClCompile>
@@ -119,6 +110,15 @@
     </ClCompile>
     <ClCompile Include="..\Classes\Step01_Animation_BasicScene.cpp">
       <Filter>src\scene\step01\animation</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\Step01_Input_RootScene.cpp">
+      <Filter>src\scene\step01\input</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\Step01_Input_KeyCodeViewScene.cpp">
+      <Filter>src\scene\step01\input</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\Step01_Input_BasicScene.cpp">
+      <Filter>src\scene\step01\input</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -170,15 +170,6 @@
     <ClInclude Include="..\Classes\PlayGroundScene.h">
       <Filter>src\scene</Filter>
     </ClInclude>
-    <ClInclude Include="..\Classes\Research_Input_RootScene.h">
-      <Filter>src\scene\step01\input</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Classes\Research_Input_BasicScene.h">
-      <Filter>src\scene\step01\input</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Classes\Research_Input_KeyCodeViewScene.h">
-      <Filter>src\scene\step01\input</Filter>
-    </ClInclude>
     <ClInclude Include="..\Classes\Step01_RootScene.h">
       <Filter>src\scene\step01</Filter>
     </ClInclude>
@@ -211,6 +202,15 @@
     </ClInclude>
     <ClInclude Include="..\Classes\Step01_Animation_BasicScene.h">
       <Filter>src\scene\step01\animation</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Step01_Input_RootScene.h">
+      <Filter>src\scene\step01\input</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Step01_Input_KeyCodeViewScene.h">
+      <Filter>src\scene\step01\input</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Step01_Input_BasicScene.h">
+      <Filter>src\scene\step01\input</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
