add class : step01 - game - path finder - terrain data

--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -129,6 +129,9 @@
     <ClCompile Include="..\Classes\Step01_Game_PathFinder_TitleScene.cpp">
       <Filter>src\scene\step01\game</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\Step01_Game_PathFinder_TerrainData.cpp">
+      <Filter>src\scene\step01\game</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -225,6 +228,9 @@
       <Filter>src\scene\step01\game</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\Step01_Game_PathFinder_TitleScene.h">
+      <Filter>src\scene\step01\game</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Step01_Game_PathFinder_TerrainData.h">
       <Filter>src\scene\step01\game</Filter>
     </ClInclude>
   </ItemGroup>
