--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -169,6 +169,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\Step01_Animation_PlayNStopScene.cpp" />
     <ClCompile Include="..\Classes\Step01_Animation_RootScene.cpp" />
     <ClCompile Include="..\Classes\Research_Input_AllowedKeysTestScene.cpp" />
+    <ClCompile Include="..\Classes\Step01_Game_PathFinder_TerrainData.cpp" />
     <ClCompile Include="..\Classes\Step01_Game_PathFinder_TitleScene.cpp" />
     <ClCompile Include="..\Classes\Step01_Game_PathFinder_PlayScene.cpp" />
     <ClCompile Include="..\Classes\Step01_Input_BasicScene.cpp" />
@@ -203,6 +204,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\Step01_Animation_PlayNStopScene.h" />
     <ClInclude Include="..\Classes\Step01_Animation_RootScene.h" />
     <ClInclude Include="..\Classes\Research_Input_AllowedKeysTestScene.h" />
+    <ClInclude Include="..\Classes\Step01_Game_PathFinder_TerrainData.h" />
     <ClInclude Include="..\Classes\Step01_Game_PathFinder_TitleScene.h" />
     <ClInclude Include="..\Classes\Step01_Game_PathFinder_PlayScene.h" />
     <ClInclude Include="..\Classes\Step01_Input_BasicScene.h" />
