--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -135,11 +135,11 @@
     <ClCompile Include="..\Classes\Step01_Game_PathFinder_TerrainData.cpp">
       <Filter>src\scene\step01\game</Filter>
     </ClCompile>
-    <ClCompile Include="..\Classes\Step01_Json_LoadNSaveScene.cpp">
-      <Filter>src\scene\step01\input</Filter>
-    </ClCompile>
     <ClCompile Include="..\Classes\Step01_Game_MapToolScene.cpp">
       <Filter>src\scene\step01\game</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\Step01_Json_LoadNSaveScene.cpp">
+      <Filter>src\scene\step01\json</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -242,11 +242,11 @@
     <ClInclude Include="..\Classes\Step01_Game_PathFinder_TerrainData.h">
       <Filter>src\scene\step01\game</Filter>
     </ClInclude>
-    <ClInclude Include="..\Classes\Step01_Json_LoadNSaveScene.h">
-      <Filter>src\scene\step01\input</Filter>
-    </ClInclude>
     <ClInclude Include="..\Classes\Step01_Game_MapToolScene.h">
       <Filter>src\scene\step01\game</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Step01_Json_LoadNSaveScene.h">
+      <Filter>src\scene\step01\json</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
