--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -34,6 +34,9 @@
     <Filter Include="src\scene\step01\json">
       <UniqueIdentifier>{17a57a53-55f5-4cad-97dc-102cdbd7c1dd}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\scene\step01\button">
+      <UniqueIdentifier>{78ebed0e-5d7e-41b2-b6aa-65f57b5c0d0c}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -141,6 +144,9 @@
     <ClCompile Include="..\Classes\Step01_Json_LoadNSaveScene.cpp">
       <Filter>src\scene\step01\json</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\Step01_Button_BasicScene.cpp">
+      <Filter>src\scene\step01\button</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -247,6 +253,9 @@
     </ClInclude>
     <ClInclude Include="..\Classes\Step01_Json_LoadNSaveScene.h">
       <Filter>src\scene\step01\json</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Step01_Button_BasicScene.h">
+      <Filter>src\scene\step01\button</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
