add class : step 01 - tool - terrain data

--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -184,6 +184,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\PlayGroundScene.cpp" />
     <ClCompile Include="..\Classes\Step01_Json_LoadNSaveScene.cpp" />
     <ClCompile Include="..\Classes\Step01_RootScene.cpp" />
+    <ClCompile Include="..\Classes\Step01_Tool_TerrainData.cpp" />
     <ClCompile Include="..\Classes\Step02_RootScene.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
@@ -222,6 +223,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\PlayGroundScene.h" />
     <ClInclude Include="..\Classes\Step01_Json_LoadNSaveScene.h" />
     <ClInclude Include="..\Classes\Step01_RootScene.h" />
+    <ClInclude Include="..\Classes\Step01_Tool_TerrainData.h" />
     <ClInclude Include="..\Classes\Step02_RootScene.h" />
     <ClInclude Include="main.h" />
   </ItemGroup>
