--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -263,6 +263,9 @@
     <ClInclude Include="..\Classes\Step01_Tool_TerrainData.h">
       <Filter>src\scene\step01\game</Filter>
     </ClInclude>
+    <ClInclude Include="..\Classes\Step01_Game_Terrain_Constant.h">
+      <Filter>src\scene\step01\game</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="game.rc">
