--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -170,6 +170,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\Step01_Animation_RootScene.cpp" />
     <ClCompile Include="..\Classes\Research_Input_AllowedKeysTestScene.cpp" />
     <ClCompile Include="..\Classes\Step01_Button_BasicScene.cpp" />
+    <ClCompile Include="..\Classes\Step01_Game_Terrain_Constant.cpp" />
     <ClCompile Include="..\Classes\Step01_Tool_MapToolScene.cpp" />
     <ClCompile Include="..\Classes\Step01_Game_PathFinder_TerrainData.cpp" />
     <ClCompile Include="..\Classes\Step01_Game_PathFinder_TitleScene.cpp" />
